<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pluto___transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pluto___margin_medium"
        android:background="@color/pluto___app_bg"
        app:cardCornerRadius="@dimen/pluto___margin_xsmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pluto___dark"
                android:theme="@style/PlutoTheme.AppBarOverlay">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pluto___section_color"
                    android:fontFamily="@font/muli_semibold"
                    android:paddingHorizontal="@dimen/pluto___margin_medium"
                    android:paddingVertical="@dimen/pluto___margin_small"
                    android:text="@string/pluto_rooms___edit_row_title"
                    android:textColor="@color/pluto___text_dark_80"
                    android:textSize="@dimen/pluto___text_xmedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="44dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingHorizontal="@dimen/pluto___margin_medium"
                    app:layout_constraintBottom_toTopOf="@+id/cta_section"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cta_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pluto___app_bg"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/pluto___dp_1"
                        android:background="@color/pluto___dark_05"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/warning"
                        android:layout_marginTop="@dimen/pluto___margin_small"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/pluto_rooms___system_table_edit_warning"
                        android:textColor="@color/pluto___red_60"
                        android:gravity="center"
                        android:fontFamily="@font/muli"
                        android:textSize="@dimen/pluto___text_xsmall"
                        android:visibility="gone"
                        android:layout_marginHorizontal="@dimen/pluto___margin_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pluto___margin_small"
                        app:cardBackgroundColor="@color/pluto___dark"
                        app:cardCornerRadius="@dimen/pluto___margin_xsmall"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/warning">

                        <TextView
                            android:id="@+id/save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/muli_semibold"
                            android:gravity="center"
                            android:padding="@dimen/pluto___margin_small"
                            android:text="@string/pluto_rooms___add_cta_text"
                            android:textColor="@color/pluto___white"
                            android:textSize="@dimen/pluto___text_xmedium" />


                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>