<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pluto___app_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pluto___dark"
        android:theme="@style/PlutoTheme.AppBarOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:paddingHorizontal="@dimen/pluto___margin_small"
                android:src="@drawable/pluto_rooms___ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@+id/titlePlaceholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titlePlaceholder" />

            <TextView
                android:id="@+id/titlePlaceholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/pluto___margin_medium"
                android:ellipsize="end"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingVertical="@dimen/pluto___margin_medium"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/pluto___white"
                android:textSize="@dimen/pluto___text_medium"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/close"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dbName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:paddingVertical="@dimen/pluto___margin_mini"
                android:text="@string/pluto_rooms___db_title"
                android:textSize="@dimen/pluto___text_xsmall"
                app:layout_constraintEnd_toEndOf="@+id/titlePlaceholder"
                app:layout_constraintStart_toStartOf="@+id/titlePlaceholder"
                app:layout_constraintTop_toTopOf="@+id/titlePlaceholder" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pluto___text_mini"
                android:background="@color/pluto___white"
                android:elevation="@dimen/pluto___margin_medium"
                app:cardCornerRadius="@dimen/pluto___margin_mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/titlePlaceholder"
                app:layout_constraintStart_toStartOf="@+id/titlePlaceholder"
                app:layout_constraintTop_toBottomOf="@+id/dbName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pluto___app_bg"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/alert"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:paddingStart="@dimen/pluto___margin_xsmall"
                        android:src="@drawable/pluto_rooms___ic_alert"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/table"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/table" />

                    <TextView
                        android:id="@+id/table"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/pluto_rooms___ic_chevron_down"
                        android:drawableRight="@drawable/pluto_rooms___ic_chevron_down"
                        android:drawablePadding="@dimen/pluto___margin_xsmall"
                        android:fontFamily="@font/muli_semibold"
                        android:hint="@string/pluto_rooms___select_table"
                        android:paddingHorizontal="@dimen/pluto___margin_small"
                        android:paddingVertical="@dimen/pluto___margin_xsmall"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/pluto___text_dark"
                        android:textColorHint="@color/pluto___text_dark_40"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/divider"
                        app:layout_constraintStart_toEndOf="@+id/alert"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_marginVertical="@dimen/pluto___margin_mini"
                        android:background="@color/pluto___dark_05"
                        app:layout_constraintBottom_toBottomOf="@+id/table"
                        app:layout_constraintEnd_toStartOf="@+id/options"
                        app:layout_constraintTop_toTopOf="@+id/table" />

                    <ImageView
                        android:id="@+id/options"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                        android:src="@drawable/pluto_rooms___ic_more_dark"
                        app:layout_constraintBottom_toBottomOf="@+id/table"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/table" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pluto___white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pluto___dark_05"
            android:drawableStart="@drawable/pluto_rooms___ic_no_filter"
            android:drawableLeft="@drawable/pluto_rooms___ic_no_filter"
            android:drawablePadding="@dimen/pluto___margin_xsmall"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center_vertical"
            android:padding="@dimen/pluto___margin_small"
            android:text="@string/pluto_rooms___no_data_filter_applied"
            android:textColor="@color/pluto___text_dark_60"
            android:textSize="@dimen/pluto___text_xxsmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/applyFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:padding="@dimen/pluto___margin_small"
            android:text="@string/pluto_rooms___apply_filter"
            android:textColor="@color/pluto___blue"
            android:textSize="@dimen/pluto___text_xxsmall"
            app:layout_constraintBottom_toBottomOf="@+id/note"
            app:layout_constraintEnd_toEndOf="@+id/note"
            app:layout_constraintTop_toTopOf="@+id/note" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>